--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <body>
     <section class="first-section">
         <div class="div-son">
-            <h1> <span>Stay focused on</span> <br> <span> Mission 2022</span> </h1>
+            <h1 class="border-add">Stay focused on <br> <span class="span-one"> Mission 2022</span> </h1>
             <div class="another-div">
                 <p>Hi,I am Mahadi Hasan Ridoy.I want to make difference in my life in 2022.I want to be a web
                     developer.So I
                     enrolled in Programming Hero's Wab Development course.I want to be a web developer after working
                     hard
                     for these six months.If you want to know me more and more then you can click the button bellow </p>
-                <a href="">CLICK ME</a>
+                <a class="link-button" href="">CLICK ME</a>
                 <p>Scroll down to explore more about us</p>
             </div>
         </div>
@@ -32,7 +32,7 @@
     </section>
 
     <section class="second-sec">
-        <h1 class="second-sec-heading">My Mission in 2022</h1>
+        <h1 class="second-sec-heading">My Mission in <span class="span-one">2022</span></h1>
         <div class="parents-div-one">
             <div class="son-div-one">
                 <img class="illus-photo" src="illusphoto/illustrator-1.png" alt="">
@@ -63,7 +63,7 @@
             <h1>Develop <br> without limits</h1>
             <p>I want to grow very fast.I want to take my progress to the in this line.And I will do my best to do it.I
                 am willing to work hard with a lot of wisdom</p>
-            <a href="">Read the Documantation</a>
+            <a class="link-button" href="">Read the Documantation</a>
         </div>
     </section>
     <section class="section-four">
@@ -75,10 +75,16 @@
                 to fulfil their needs.Like people in a community,they also need to exchange goods,services,information
                 and money.Thus,they are interdependent.
             </p>
-            <a href="">Read the Documantation</a>
+            <a class="link-button" href="">Read the Documantation</a>
         </div>
         <div class="son-div-sec-four">
             <img class="theird-img" src="pictures/project.png" alt="">
+        </div>
+    </section>
+    <section>
+        <div class="last-div">
+            <h2>Mission <span class="last-span">2022</span></h2>
+            <p>Hard work, Perseverance, and Determination for 2022</p>
         </div>
     </section>
 </body>
