--- a/index.html
+++ b/index.html
@@ -14,25 +14,33 @@
 
 <body>
     <section class="first-section">
+
         <div class="div-son">
             <h1 class="border-add">Stay focused on <br> <span class="span-one"> Mission 2022</span> </h1>
             <div class="another-div">
                 <p>Hi,I am Mahadi Hasan Ridoy.I want to make difference in my life in 2022.I want to be a web
                     developer.So I
-                    enrolled in Programming Hero's Wab Development course.I want to be a web developer after working
+                    enrolled in Programming Hero's Web Development course.I want to be a web developer after working
                     hard
-                    for these six months.If you want to know me more and more then you can click the button bellow </p>
-                <a class="link-button" href="">CLICK ME</a>
+                    for these six months.If you want to know about me more and more then you can click the button bellow
+                </p>
+                <a class="link-button" target="_blank"
+                    href="https://www.facebook.com/profile.php?id=100009288046014">CLICK
+                    ME</a>
                 <p>Scroll down to explore more about us</p>
             </div>
+
         </div>
         <div class="son-div">
             <img class="first-img" src="images/my-bg1.png" alt="">
         </div>
+
     </section>
 
     <section class="second-sec">
+
         <h1 class="second-sec-heading">My Mission in <span class="span-one">2022</span></h1>
+
         <div class="parents-div-one">
             <div class="son-div-one">
                 <img class="illus-photo" src="illusphoto/illustrator-1.png" alt="">
@@ -40,33 +48,43 @@
                 <p>I want to be a proffesional web developer.After working hard for this six month i beleive that
                     inshaallah I could be a web developer.And my dream will fullfil.</p>
             </div>
+
             <div class="son-div-two">
                 <img class="illus-photo" src="illusphoto/illustrator-2.png" alt="">
                 <h1>Vission</h1>
                 <p>I will reach my goal at any cost.I am willing to work hard for it.And I believe that hard work is the
                     key to good luck.Hard work never goes in vain</p>
             </div>
+
             <div class="son-div-three">
                 <img class="illus-photo" src="illusphoto/illustrator-3.png" alt="">
                 <h1>Goals</h1>
                 <p>By now you know that my first goal is to be a good web developer.And I want to take this as a
                     profession.I want to learn to work well and get a good quality job.</p>
             </div>
+
         </div>
+
     </section>
 
     <section class="section-three">
+
         <div>
             <img class="second-img" src="pictures/coding.png" alt="">
         </div>
         <div class="son-div-four">
-            <h1>Develop <br> without limits</h1>
-            <p>I want to grow very fast.I want to take my progress to the in this line.And I will do my best to do it.I
-                am willing to work hard with a lot of wisdom</p>
+            <h1>What are web developer skills?</h1>
+            <p>Web developer skills refer to the specific abilities needed to get hired and successfully perform in a
+                web developer role. Having these skills in abundance can help you stand out from other candidates vying
+                for the same role and in your everyday tasks on the job. As with any job, you also have the ability to
+                develop your skills as a web developer over time. Some web developer skills include understanding HTML,
+                general design skills and being analytical.</p>
             <a class="link-button" href="">Read the Documantation</a>
         </div>
     </section>
+
     <section class="section-four">
+
         <div class="son-div-sec-for">
             <h1>
                 Know our <br>Global Community
@@ -77,15 +95,40 @@
             </p>
             <a class="link-button" href="">Read the Documantation</a>
         </div>
+
         <div class="son-div-sec-four">
             <img class="theird-img" src="pictures/project.png" alt="">
         </div>
+
     </section>
-    <section>
+
+    <section class="section-five">
+
+        <div class="divfive">
+            <img src="pictures/human.png" alt="">
+        </div>
+
+        <div class="divfive-second">
+            <h1>How to be a <br> <span class="span-again">Better Human</span></h1>
+            <p>How to become a better person? This is a question often asked by the people who want to have a new life.
+                Some said that to become a better person, you must be true to yourself or you must have a goal in life
+                so that you are directed to do things positively. Others would say if you only have a determination in
+                facing the challenges or trials of life, then definitely you will become a better person. Whatever the
+                ways of becoming a better person, these are only some key ingredients that will eventually lead you to
+                be a better person.
+            </p>
+            <a class="link-button" href="">Read Continue</a>
+        </div>
+
+    </section>
+
+    <section class="section-six">
+
         <div class="last-div">
             <h2>Mission <span class="last-span">2022</span></h2>
             <p>Hard work, Perseverance, and Determination for 2022</p>
         </div>
+
     </section>
 </body>
 
